--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,31 +1,27 @@
-.page-header
-
-  %h1 Listing tweets
 
 .table-responsive
   %table.table.table-striped.table-bordered.table-hover
     %thead
-      %tr
-        %th Text
-        %th User name
-      -#  %th{colspan: 3}
 
     %tbody
       - @tweets.each do |tweet|
         %tr
-
           %td
             %p
+              -# current_user.name
+              @
+              = tweet.user_name
+              %span.waybackwhen
+                = distance_of_time_in_words_to_now(tweet.created_at)
               = link_to tweet.text
               = link_to upvote_tweet_path(tweet) do
                 -# link_to "<i class='fa fa-chevron-up' aria-hidden='true'>", upvote_tweet_path(tweet)
                 %i.fa.fa-star{"aria-hidden" => "true"}
-              = link_to downvote_tweet_path(tweet) do
-                -# link_to "<i class='fa fa-chevron-up' aria-hidden='true'>", upvote_tweet_path(tweet)
-                %i.fa.fa-star-o{"aria-hidden" => "true"}
+              -# = link_to downvote_tweet_path(tweet) do
+              -#   -# link_to "<i class='fa fa-chevron-up' aria-hidden='true'>", upvote_tweet_path(tweet)
+              -#   %i.fa.fa-star-o{"aria-hidden" => "true"}
               = tweet.upvote_count
-              = tweet.downvote_count
-              %em
-                Net Value:
-                = tweet.net
-          %td= tweet.user_name
+              -# = tweet.downvote_count
+              -# %em
+              -#   Net Value:
+              -#   = tweet.net  cmd+ / for comment out
