--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+
+ *= require 'about'
+ *= require 'bootstrap-generators'
+ *= require 'bootstrap-variables'
  *= require_self
+ *= require 'tweets.scss'
  */
 
 
